# PlasmaNGenuity

./: 99-plasmangenuity.rules  PKGBUILD  README.md  build-plasmoid.sh  install-plasmoid.sh  plasmangenuity-1.0.0.plasmoid  plasmangenuity.desktop  plasmangenuity.install  pyproject.toml
plasmangenuity/: cli.py  device.py  panel.py  tray.py
plasmangenuity/widgets/: __init__.py  buttons_section.py  dpi_section.py  info_section.py  led_section.py  macros_section.py  settings_section.py
plasmoid/: metadata.json
plasmoid/contents/code/: backend.py
plasmoid/contents/ui/: main.qml
